done the backbone

--- a/1_similar_docs/similar_itemsets.ipynb
+++ b/1_similar_docs/similar_itemsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,10 @@
     "import os\n",
     "import os.path\n",
     "import random\n",
-    "import binascii"
+    "import binascii\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "from functools import reduce"
    ]
   },
   {
@@ -175,24 +178,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[120392129, 281924773, 48793314, 113009555],\n",
-       " [816028170, 63038758, 121942940, 227166117],\n",
-       " [247472466, 63038758, 36547400, 54618441]]"
+       "[[261832257,\n",
+       "  611073358,\n",
+       "  863505500,\n",
+       "  142349659,\n",
+       "  209785218,\n",
+       "  221352667,\n",
+       "  232328098,\n",
+       "  296227307,\n",
+       "  9573879,\n",
+       "  31571753],\n",
+       " [415029327,\n",
+       "  41758626,\n",
+       "  766298946,\n",
+       "  142349659,\n",
+       "  123742576,\n",
+       "  96756300,\n",
+       "  388742745,\n",
+       "  177270671,\n",
+       "  9573879,\n",
+       "  204884183],\n",
+       " [257595858,\n",
+       "  41758626,\n",
+       "  224319495,\n",
+       "  142349659,\n",
+       "  123742576,\n",
+       "  96756300,\n",
+       "  388742745,\n",
+       "  177270671,\n",
+       "  9573879,\n",
+       "  225197707]]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hash_store = HashStore(4, seed=42)\n",
+    "hash_store = HashStore(10, seed=42)\n",
     "file_list = glob.glob(os.path.join(corpus_folder,\"*\"))\n",
     "shingle_sets = list(map(file_to_shingles, file_list))\n",
     "signature_matrix = list(map(hash_store.get_signature , shingle_sets))\n",
@@ -201,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +240,7 @@
        "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'c'), ('b', 'd'), ('c', 'd')]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +282,7 @@
        "0.2"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,6 +292,9 @@
     "\n",
     "def compare_signatures(sign1, sign2):\n",
     "    assert len(sign1) == len(sign2)\n",
+    "    # this is one liner in numpy, but we decided to use only plain python\n",
+    "    # also with numpy we must pay attention to not overflow when calculating\n",
+    "    # the hashes\n",
     "    return sum([x == y for x,y in zip(sign1, sign2)]) / len(sign1)\n",
     "\n",
     "compare_signatures(sign1,sign2)"
@@ -269,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.0\n",
-      "0.25\n"
+      "0.2\n",
+      "0.2\n",
+      "0.7\n"
      ]
     }
    ],
@@ -286,6 +319,131 @@
     "for sign1, sign2 in itertools.combinations(signature_matrix,2):\n",
     "#     print(set1,set2)\n",
     "    print(compare_signatures(sign1,sign2))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[261832257,\n",
+       "  611073358,\n",
+       "  863505500,\n",
+       "  142349659,\n",
+       "  209785218,\n",
+       "  221352667,\n",
+       "  232328098,\n",
+       "  296227307,\n",
+       "  9573879,\n",
+       "  31571753],\n",
+       " [415029327,\n",
+       "  41758626,\n",
+       "  766298946,\n",
+       "  142349659,\n",
+       "  123742576,\n",
+       "  96756300,\n",
+       "  388742745,\n",
+       "  177270671,\n",
+       "  9573879,\n",
+       "  204884183],\n",
+       " [257595858,\n",
+       "  41758626,\n",
+       "  224319495,\n",
+       "  142349659,\n",
+       "  123742576,\n",
+       "  96756300,\n",
+       "  388742745,\n",
+       "  177270671,\n",
+       "  9573879,\n",
+       "  225197707]]"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "signature_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2, 0.7)}"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class LSH:\n",
+    "    def __init__(self, signature_matrix, bands, threshold = 0.5):\n",
+    "        # using only bands because the bands * rows = len(signature)\n",
+    "        self.signature_matrix = signature_matrix\n",
+    "        self.bands = bands\n",
+    "        # the last band, if not completed, is hashed anyway\n",
+    "        self.signature_length = len(self.signature_matrix[0])\n",
+    "        \n",
+    "        assert self.signature_length > self.bands\n",
+    "        self.rows = self.signature_length // self.bands\n",
+    "        \n",
+    "        self.threshold = threshold\n",
+    "    \n",
+    "    def hash_band_item(self, band):\n",
+    "        return reduce(lambda x,y : \"{}{}\".format(x,y), band)\n",
+    "        \n",
+    "    def get_band_item(self, band_index, doc_index):\n",
+    "        start_index = band_index * self.rows\n",
+    "        end_index = min((band_index + 1) * self.rows, self.signature_length)\n",
+    "        assert start_index < end_index\n",
+    "        return self.signature_matrix[doc_index][start_index : end_index]\n",
+    "    \n",
+    "    def get_band_candidates(self, band_index):\n",
+    "        hash_table = defaultdict(list)\n",
+    "        for doc_index in range(len(self.signature_matrix)) :\n",
+    "            band_item = self.get_band_item(band_index, doc_index)\n",
+    "            hash_table[self.hash_band_item(band_item)].append(doc_index)\n",
+    "        \n",
+    "        candidates = []\n",
+    "        for values in hash_table.values():\n",
+    "            if len(values) > 1:\n",
+    "                candidates += list(itertools.combinations(sorted(values),2))  # get the list of candidate PAIRS\n",
+    "        return set(candidates)  # unique pairs\n",
+    "    \n",
+    "    def get_candidates(self):\n",
+    "        candidates = set()\n",
+    "        for i in range(self.bands):\n",
+    "            candidates = candidates.union(self.get_band_candidates(i))\n",
+    "        return candidates\n",
+    "    \n",
+    "    def get_similar(self):\n",
+    "        similar_docs = set()\n",
+    "        candidates = self.get_candidates()\n",
+    "        for doc_index_1, doc_index_2 in candidates:\n",
+    "            sign1, sign2 = signature_matrix[doc_index_1], signature_matrix[doc_index_2]\n",
+    "            similarity = compare_signatures(sign1, sign2)\n",
+    "            if similarity > self.threshold:\n",
+    "                similar_docs.add((doc_index_1,doc_index_2,similarity))\n",
+    "        return similar_docs\n",
+    "                \n",
+    "        \n",
+    "    \n",
+    "lsh = LSH(signature_matrix,5,0.5)    \n",
+    "lsh.rows\n",
+    "lsh.get_band_item(1,2)\n",
+    "lsh.hash_band_item(lsh.get_band_item(1,2))\n",
+    "lsh.get_similar()"
    ]
   }
  ],
