--- a/1_similar_docs/similar_itemsets.ipynb
+++ b/1_similar_docs/similar_itemsets.ipynb
@@ -19,17 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus_folder = \"./data/test\"\n",
+    "# corpus_folder = \"./data/test\"\n",
+    "corpus_folder = \"./data/enrontest/\"\n",
     "test_file_path = \"./data/test/1.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
        "0.5"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
        "[74223370, 45489653, 215062606]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,45 +179,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[261832257,\n",
-       "  611073358,\n",
-       "  863505500,\n",
-       "  142349659,\n",
-       "  209785218,\n",
-       "  221352667,\n",
-       "  232328098,\n",
-       "  296227307,\n",
+       "[[2634223,\n",
+       "  4000843,\n",
+       "  32313656,\n",
+       "  9247990,\n",
+       "  46767515,\n",
+       "  22107738,\n",
+       "  5794887,\n",
+       "  72568090,\n",
+       "  13716676,\n",
+       "  6915958],\n",
+       " [2634223,\n",
+       "  66339628,\n",
+       "  4206925,\n",
+       "  45487897,\n",
+       "  22536346,\n",
+       "  13591351,\n",
+       "  5794887,\n",
+       "  15110199,\n",
+       "  9573879,\n",
+       "  6755737],\n",
+       " [2634223,\n",
+       "  41758626,\n",
+       "  29998645,\n",
+       "  9039074,\n",
+       "  46767515,\n",
+       "  8979426,\n",
+       "  5794887,\n",
+       "  23670235,\n",
+       "  9573879,\n",
+       "  6915958],\n",
+       " [2634223,\n",
+       "  4000843,\n",
+       "  29998645,\n",
+       "  9247990,\n",
+       "  22536346,\n",
+       "  25912341,\n",
+       "  5794887,\n",
+       "  7019572,\n",
        "  9573879,\n",
        "  31571753],\n",
-       " [415029327,\n",
-       "  41758626,\n",
-       "  766298946,\n",
-       "  142349659,\n",
-       "  123742576,\n",
-       "  96756300,\n",
-       "  388742745,\n",
-       "  177270671,\n",
+       " [2634223,\n",
+       "  66339628,\n",
+       "  4206925,\n",
+       "  9247990,\n",
+       "  68536124,\n",
+       "  25912341,\n",
+       "  41658858,\n",
+       "  47885525,\n",
        "  9573879,\n",
-       "  204884183],\n",
-       " [257595858,\n",
-       "  41758626,\n",
-       "  224319495,\n",
-       "  142349659,\n",
-       "  123742576,\n",
-       "  96756300,\n",
-       "  388742745,\n",
-       "  177270671,\n",
-       "  9573879,\n",
-       "  225197707]]"
+       "  6915958]]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,16 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.11428571428571428\n",
-      "0.11428571428571428\n",
-      "0.6363636363636364\n"
+      "0.42857142857142855\n",
+      "0.40532544378698226\n",
+      "0.4610169491525424\n",
+      "0.44150943396226416\n",
+      "0.4491525423728814\n",
+      "0.4169184290030212\n",
+      "0.41414141414141414\n",
+      "0.43915343915343913\n",
+      "0.3865546218487395\n",
+      "0.39197530864197533\n"
      ]
     }
    ],
@@ -273,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2"
+       "0.4"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +338,15 @@
      "output_type": "stream",
      "text": [
       "0.2\n",
-      "0.2\n",
-      "0.7\n"
+      "0.4\n",
+      "0.4\n",
+      "0.3\n",
+      "0.3\n",
+      "0.4\n",
+      "0.4\n",
+      "0.4\n",
+      "0.3\n",
+      "0.4\n"
      ]
     }
    ],
@@ -323,45 +358,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[261832257,\n",
-       "  611073358,\n",
-       "  863505500,\n",
-       "  142349659,\n",
-       "  209785218,\n",
-       "  221352667,\n",
-       "  232328098,\n",
-       "  296227307,\n",
+       "[[2634223,\n",
+       "  4000843,\n",
+       "  32313656,\n",
+       "  9247990,\n",
+       "  46767515,\n",
+       "  22107738,\n",
+       "  5794887,\n",
+       "  72568090,\n",
+       "  13716676,\n",
+       "  6915958],\n",
+       " [2634223,\n",
+       "  66339628,\n",
+       "  4206925,\n",
+       "  45487897,\n",
+       "  22536346,\n",
+       "  13591351,\n",
+       "  5794887,\n",
+       "  15110199,\n",
+       "  9573879,\n",
+       "  6755737],\n",
+       " [2634223,\n",
+       "  41758626,\n",
+       "  29998645,\n",
+       "  9039074,\n",
+       "  46767515,\n",
+       "  8979426,\n",
+       "  5794887,\n",
+       "  23670235,\n",
+       "  9573879,\n",
+       "  6915958],\n",
+       " [2634223,\n",
+       "  4000843,\n",
+       "  29998645,\n",
+       "  9247990,\n",
+       "  22536346,\n",
+       "  25912341,\n",
+       "  5794887,\n",
+       "  7019572,\n",
        "  9573879,\n",
        "  31571753],\n",
-       " [415029327,\n",
-       "  41758626,\n",
-       "  766298946,\n",
-       "  142349659,\n",
-       "  123742576,\n",
-       "  96756300,\n",
-       "  388742745,\n",
-       "  177270671,\n",
+       " [2634223,\n",
+       "  66339628,\n",
+       "  4206925,\n",
+       "  9247990,\n",
+       "  68536124,\n",
+       "  25912341,\n",
+       "  41658858,\n",
+       "  47885525,\n",
        "  9573879,\n",
-       "  204884183],\n",
-       " [257595858,\n",
-       "  41758626,\n",
-       "  224319495,\n",
-       "  142349659,\n",
-       "  123742576,\n",
-       "  96756300,\n",
-       "  388742745,\n",
-       "  177270671,\n",
-       "  9573879,\n",
-       "  225197707]]"
+       "  6915958]]"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(1, 2, 0.7)}"
+       "{(0, 3, 0.4), (1, 4, 0.4), (2, 4, 0.3)}"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,12 +494,19 @@
     "                \n",
     "        \n",
     "    \n",
-    "lsh = LSH(signature_matrix,5,0.5)    \n",
+    "lsh = LSH(signature_matrix,5,0.29)    \n",
     "lsh.rows\n",
     "lsh.get_band_item(1,2)\n",
     "lsh.hash_band_item(lsh.get_band_item(1,2))\n",
     "lsh.get_similar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
