--- a/2_apriori/Apriori.ipynb
+++ b/2_apriori/Apriori.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "support_threshold_percentage = 0.05"
+    "support_threshold_percentage = 0.01\n",
+    "k_max = 3  # triplets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frequent itemsets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,25 +39,27 @@
      "text": [
       "Total number of transactions: 100000\n",
       "Total number of distinct items: 870\n",
-      "Support percentage thr 0.05, equivalent to at leat 5000 transactions\n"
+      "Support percentage thr 0.01, equivalent to at leat 1000 transactions\n"
      ]
     }
    ],
    "source": [
     "data_file = \"./data/T10I4D100K.dat\"\n",
     "\n",
-    "item_to_transactions = defaultdict(set)\n",
+    "k_list = [None] * k_max\n",
     "\n",
     "tot_transactions = 0\n",
     "with open(data_file, 'r') as data_file:\n",
+    "    singleton_to_transactions = defaultdict(set)\n",
     "    for transaction_id, transaction in enumerate(data_file):\n",
     "        for item in transaction.strip(\" \\n\").split(\" \"):\n",
-    "            item_to_transactions[item].add(transaction_id)\n",
+    "            singleton_to_transactions[frozenset({item})].add(transaction_id)\n",
     "        tot_transactions += 1\n",
+    "    k_list[0] = singleton_to_transactions\n",
     "\n",
     "\n",
     "print(\"Total number of transactions: {}\".format(tot_transactions))\n",
-    "print(\"Total number of distinct items: {}\".format(len(item_to_transactions.keys())))\n",
+    "print(\"Total number of distinct items: {}\".format(len(k_list[0].keys())))\n",
     "support_threshold = int(support_threshold_percentage * tot_transactions)\n",
     "print(\"Support percentage thr {}, equivalent to at leat {} transactions\".format(\n",
     "    support_threshold_percentage, support_threshold))"
@@ -57,99 +67,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining singletons 10\n"
+      "Remaining singletons 375\n"
      ]
     }
    ],
    "source": [
-    "items_below_threshold = [\n",
-    "    item for item, transactions in item_to_transactions.items() if len(transactions) < support_threshold\n",
-    "]\n",
-    "len(items_below_threshold)\n",
-    "for item in items_below_threshold:\n",
-    "    del(item_to_transactions[item])\n",
-    "print(\"Remaining singletons {}\".format(len(item_to_transactions.keys())))"
+    "def filter_and_remove(set_to_transactions):\n",
+    "    items_below_threshold = [\n",
+    "        item for item, transactions in set_to_transactions.items() if len(transactions) < support_threshold\n",
+    "    ]\n",
+    "    for item in items_below_threshold:\n",
+    "        del(set_to_transactions[item])\n",
+    "        \n",
+    "filter_and_remove(k_list[0])\n",
+    "print(\"Remaining singletons {}\".format(len(k_list[0].keys())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00355\n",
-      "0.00387\n",
-      "0.0086\n",
-      "0.00392\n",
-      "0.0064\n",
-      "0.00303\n",
-      "0.00319\n",
-      "0.01194\n",
-      "0.00504\n",
-      "0.00155\n",
-      "0.00176\n",
-      "0.00366\n",
-      "0.00252\n",
-      "0.00344\n",
-      "0.00263\n",
-      "0.00259\n",
-      "0.00238\n",
-      "0.00208\n",
-      "0.00443\n",
-      "0.00334\n",
-      "0.00198\n",
-      "0.00219\n",
-      "0.00349\n",
-      "0.00613\n",
-      "0.00226\n",
-      "0.00225\n",
-      "0.00183\n",
-      "0.00189\n",
-      "0.00267\n",
-      "0.00227\n",
-      "0.00283\n",
-      "0.00498\n",
-      "0.00566\n",
-      "0.00294\n",
-      "0.00328\n",
-      "0.00403\n",
-      "0.00301\n",
-      "0.00584\n",
-      "0.00317\n",
-      "0.0028\n",
-      "0.00275\n",
-      "0.00276\n",
-      "0.00259\n",
-      "0.00329\n",
-      "0.00321\n"
+      "** Computing itemsets of size 2 **\n",
+      "Number of sets with support 1000 = 9\n",
+      "** Computing itemsets of size 3 **\n",
+      "Number of sets with support 1000 = 1\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "for items in itertools.combinations(item_to_transactions.keys(),2):\n",
-    "    common_txs = item_to_transactions[items[0]]\n",
-    "    for item in items[1:]:\n",
-    "        common_txs = common_txs.intersection(item_to_transactions[item])\n",
-    "    print(len(common_txs)/ tot_transactions)"
+    "for k in range(2, k_max + 1):\n",
+    "    print(\"** Computing itemsets of size {} **\".format(k))\n",
+    "    singletons = k_list[0]\n",
+    "    k_minus_one_itemsets = k_list[k - 2]\n",
+    "    k_item_set_to_transactions = defaultdict(set)\n",
+    "    for keyA, keyB in itertools.product(singletons.keys(), k_minus_one_itemsets.keys()):\n",
+    "        k_item_set = frozenset(keyA.union(keyB))\n",
+    "        if len(k_item_set) != k:\n",
+    "            continue\n",
+    "        common_txs = singletons[keyA].intersection(k_minus_one_itemsets[keyB])\n",
+    "        k_item_set_to_transactions[k_item_set] = common_txs\n",
+    "    filter_and_remove(k_item_set_to_transactions)\n",
+    "    print(\"Number of sets with support {} = {}\".format(support_threshold, len(k_item_set_to_transactions)))\n",
+    "    k_list[k - 1] = k_item_set_to_transactions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
