Update corpus sample

--- a/1_similar_docs/similar_itemsets.ipynb
+++ b/1_similar_docs/similar_itemsets.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -138,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jaccard similarity between {'a', 'c', 'b'} and {'d', 'c', 'b'} = 0.5\n"
+      "Jaccard similarity between {'b', 'a', 'c'} and {'d', 'b', 'c'} = 0.5\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
       "Converting to shingles...\n",
       "Generating signatures...\n",
       "\n",
-      "Minhashing time: 867ms\n",
+      "Minhashing time: 745ms\n",
       "Signature matrix shape: 10 x 100\n",
       "\n",
       "***** LSH *****\n",
@@ -435,7 +435,7 @@
       "*****\n",
       "\n",
       "***** ALL *****\n",
-      "***** RANKING (2 pairs retrieved in 1ms) *****\n",
+      "***** RANKING (2 pairs retrieved in 0ms) *****\n",
       "Similarity: 0.91\n",
       "./data/enrontest/spam_email2.txt and ./data/enrontest/spam_email1.txt\n",
       "*****\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -539,11 +539,11 @@
       "Converting to shingles...\n",
       "Generating signatures...\n",
       "\n",
-      "Minhashing time: 151876ms\n",
+      "Minhashing time: 144470ms\n",
       "Signature matrix shape: 1500 x 100\n",
       "\n",
       "***** LSH *****\n",
-      "***** RANKING (883 pairs retrieved in 179ms) *****\n",
+      "***** RANKING (883 pairs retrieved in 169ms) *****\n",
       "Similarity:  1.0\n",
       "./data/spam/3257.2004-12-21.GP.spam.txt and ./data/spam/1679.2004-07-22.GP.spam.txt\n",
       "*****\n",
@@ -579,7 +579,7 @@
       "*****\n",
       "\n",
       "***** ALL *****\n",
-      "***** RANKING (1339 pairs retrieved in 12063ms) *****\n",
+      "***** RANKING (1339 pairs retrieved in 12705ms) *****\n",
       "Similarity:  1.0\n",
       "./data/spam/3257.2004-12-21.GP.spam.txt and ./data/spam/1679.2004-07-22.GP.spam.txt\n",
       "*****\n",
