--- a/2_apriori/Apriori.ipynb
+++ b/2_apriori/Apriori.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Authors: Fernando Díaz González and Giorgio Ruffa\n",
+    "{fdiaz, ruffa}@kth.se\n",
+    "\n",
+    "ID 2222 Data Mining. Assignment 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,17 +196,17 @@
       "Items: frozenset({'687'})               -> Support: 1762\n",
       "Items: frozenset({'775'})               -> Support: 3771\n",
       "Number of 2-itemsets with support 1000 = 9\n",
-      "Items: frozenset({'368', '682'})        -> Support: 1193\n",
+      "Items: frozenset({'682', '368'})        -> Support: 1193\n",
       "Items: frozenset({'829', '368'})        -> Support: 1194\n",
-      "Items: frozenset({'39', '825'})         -> Support: 1187\n",
+      "Items: frozenset({'825', '39'})         -> Support: 1187\n",
       "Items: frozenset({'825', '704'})        -> Support: 1102\n",
-      "Items: frozenset({'39', '704'})         -> Support: 1107\n",
-      "Items: frozenset({'227', '390'})        -> Support: 1049\n",
+      "Items: frozenset({'704', '39'})         -> Support: 1107\n",
+      "Items: frozenset({'390', '227'})        -> Support: 1049\n",
       "Items: frozenset({'390', '722'})        -> Support: 1042\n",
-      "Items: frozenset({'346', '217'})        -> Support: 1336\n",
+      "Items: frozenset({'217', '346'})        -> Support: 1336\n",
       "Items: frozenset({'829', '789'})        -> Support: 1194\n",
       "Number of 3-itemsets with support 1000 = 1\n",
-      "Items: frozenset({'39', '825', '704'})  -> Support: 1035\n",
+      "Items: frozenset({'825', '39', '704'})  -> Support: 1035\n",
       "Number of 4-itemsets with support 1000 = 0\n"
      ]
     }
@@ -273,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,11 +291,11 @@
      "output_type": "stream",
      "text": [
       "Found 5 rules, showing 15\n",
-      "frozenset({'39', '825'}) -> frozenset({'704'}) (confidence: 0.8719460825610783)\n",
-      "frozenset({'39', '825'}) -> frozenset({'704'}) (confidence: 0.8719460825610783)\n",
-      "frozenset({'704'}) -> frozenset({'39'}) (confidence: 0.617056856187291)\n",
-      "frozenset({'825', '704'}) -> frozenset({'39'}) (confidence: 0.9392014519056261)\n",
-      "frozenset({'39', '825'}) -> frozenset({'704'}) (confidence: 0.8719460825610783)\n"
+      "frozenset({'704'}) -> frozenset({'825'}) (confidence: 0.6142697881828316)\n",
+      "frozenset({'704', '39'}) -> frozenset({'825'}) (confidence: 0.9349593495934959)\n",
+      "frozenset({'825', '39'}) -> frozenset({'704'}) (confidence: 0.8719460825610783)\n",
+      "frozenset({'704'}) -> frozenset({'825'}) (confidence: 0.6142697881828316)\n",
+      "frozenset({'825', '39'}) -> frozenset({'704'}) (confidence: 0.8719460825610783)\n"
      ]
     }
    ],
@@ -298,6 +308,13 @@
     "    antecedent, consequent, confidence, _ = random.choice(rules)\n",
     "    print(\"{} -> {} (confidence: {})\".format(antecedent, consequent, confidence))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
