flajolet-martin not working

--- a/3_mining_data_streams/mining_data_streams.ipynb
+++ b/3_mining_data_streams/mining_data_streams.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
+    "import mmh3\n",
+    "import random\n",
     "\n",
     "from collections import defaultdict\n",
     "from networkx import Graph, DiGraph"
@@ -18,7 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flajolet-Martin"
+    "## Exact-Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first implement an exact counter using python sets in order to verify the correctness of the hyperball algorithm."
    ]
   },
   {
@@ -66,6 +75,180 @@
     "for i in range(100):\n",
     "    counter.add(i)\n",
     "print(counter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flajolet-Martin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b10000000000\n",
+      "[16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16]\n",
+      "size of a split: 20\n",
+      "[16, 16, 16, 16, 16]\n",
+      "65536.0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FMCounter:\n",
+    "    \n",
+    "    def __init__(self, n_hashing_functions=100, bit_string_length=16, n_splits=10, initial=None):\n",
+    "        self.Rs = [0 for _ in range(n_hashing_functions)] if not initial else initial  # following mmds \n",
+    "        self.modulus = 2**(bit_string_length + 1) - 1\n",
+    "        self.bit_string_length = bit_string_length\n",
+    "        self.coefficients_a = self._generate_coefficient_list(n_hashing_functions)\n",
+    "        self.coefficients_b = self._generate_coefficient_list(n_hashing_functions)\n",
+    "        self.n_splits = n_splits\n",
+    "        \n",
+    "    def _generate_coefficient_list(self, number_of_coefficients):\n",
+    "        # integers in python have arbitrary precision (not applicable to numpy)\n",
+    "        # https://mortada.net/can-integer-operations-overflow-in-python.html\n",
+    "        coefficients = []\n",
+    "        \n",
+    "        def random_int():\n",
+    "            return random.randint(0,self.modulus - 1)\n",
+    "        \n",
+    "        for _ in range(number_of_coefficients):\n",
+    "            candidate = random_int()\n",
+    "            while candidate in coefficients:\n",
+    "                candidate = random_int()\n",
+    "            coefficients.append(candidate)\n",
+    "        \n",
+    "        return coefficients\n",
+    "    \n",
+    "    def _hash(self, node_id, a, b):\n",
+    "        to_hash = 0 \n",
+    "        if type(node_id) == str:\n",
+    "            to_hash = binascii.crc32(node_id.encode(\"utf-8\"))\n",
+    "        elif type(node_id) == int:\n",
+    "            to_hash = node_id\n",
+    "        else:\n",
+    "            raise ValueError()\n",
+    "        return (to_hash * a + b ) % self.modulus\n",
+    "    \n",
+    "    def _count_trailing_zeros(self, value):\n",
+    "        for i in range(self.bit_string_length):\n",
+    "            if value & (1 << i) != 0:\n",
+    "                return i\n",
+    "        return self.bit_string_length  # 2^-self.bit_string_lenght chances of being here\n",
+    "            \n",
+    "    def add(self, node):\n",
+    "        for i in range(len(self.Rs)):\n",
+    "            a = self.coefficients_a[i]\n",
+    "            b = self.coefficients_b[i]\n",
+    "            self.Rs[i] = max(\n",
+    "                self._count_trailing_zeros(self._hash(node, a, b)), \n",
+    "                self.Rs[i]\n",
+    "            )\n",
+    "    \n",
+    "    def value(self):\n",
+    "        # compute the average of each split\n",
+    "        r_in_each_split = len(self.Rs) // self.n_splits \n",
+    "        print(\"size of a split: {}\".format(r_in_each_split))\n",
+    "        split_medians = []\n",
+    "        for i in range(self.n_splits):\n",
+    "            start = i*r_in_each_split\n",
+    "            end = start + r_in_each_split\n",
+    "            split_content = self.Rs[ start : min(len(self.Rs), end)]\n",
+    "            split_medians.append(\n",
+    "                sorted(split_content)[len(split_content)//2]\n",
+    "            )\n",
+    "        print(split_medians)\n",
+    "        return 2 ** (sum(split_medians) / len(split_medians))\n",
+    "#         return 2 ** sorted(split_averages)[len(split_averages)//2]\n",
+    "#         return 2 ** (sum(self.Rs)/len(self.Rs))\n",
+    "        \n",
+    "#     def value(self):\n",
+    "#         return len(self.distincts)\n",
+    "    \n",
+    "#     def union(self, other):\n",
+    "#         return Counter(self.distincts.union(other.distincts))\n",
+    "        \n",
+    "#     def __str__(self):\n",
+    "#         return 'Counter has value {}'.format(self.value())\n",
+    "    \n",
+    "#     def __repr__(self):\n",
+    "#         return str(self.value())\n",
+    "\n",
+    "value = 2**10\n",
+    "print(bin(value))\n",
+    "counter = FMCounter(n_hashing_functions=100, n_splits=5, bit_string_length=16)\n",
+    "for i in range(1000000):\n",
+    "    counter.add(i)\n",
+    "print(counter.Rs)\n",
+    "print(counter.value())\n",
+    "print(len([x for x in counter.Rs if x == 0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[96430, 56298]\n",
+      "[77250, 58649]\n",
+      "131072\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(counter.coefficients_a[:2])\n",
+    "print(counter.coefficients_b[:2])\n",
+    "print(counter.modulus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b10001101110110111'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin((56298 * 123123123 + 58649) % 131072)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4096\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 ** 12 )#sorted([9.4, 9.4, 10.7, 11.9, 10.3, 10.6, 10.7, 11.9, 11.8, 11.6])[5]"
    ]
   },
   {
@@ -328,11 +511,18 @@
     "\n",
     "**1. What were the challenges you have faced when implementing the algorithm?**\n",
     "\n",
-    "The main challenge was dealing correcly with the update of the counters. Meaning that the union must always be computed between the updated version of the current node counter and the old version of the neighbor counter. This is a consequency of having to adapt to a streaming approach as in the original implementation the neighbors are accessed sequentially. Also, we need to keep a complete copy of the previous counters while updating the new ones, hence ocupying twice the memory.\n",
+    "The main challenge was dealing correcly with the update of the counters. Meaning that the union must always be computed between the updated version of the current node counter and the old version of the neighbor counter. We need to keep a complete copy of the previous counters while updating the new ones, hence occupying twice the memory. The original algorith from Boldi and Vigna stores the temporary counters on disk and update them at the end of the full iteration.\n",
     "\n",
     "**2. Can the algorithm be easily parallelized? If yes, how? If not, why? Explain.**\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -351,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
